# test_aiogram_bot

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
app/: .env  __main__.py  config.py  misc.py
app/handlers/: __init__.py  admin.py  base.py  record.py  registration.py  settings.py
app/middlewares/: __init__.py  i18n.py
app/models/: __init__.py  db.py  record.py  user.py
app/utils/: before_start.py  executor.py  helpers.py  keyboard.py  simple_calendar.py
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/ru/LC_MESSAGES/: messages.mo  messages.po
migrations/: env.py
migrations/versions/: c6e397ef3e05_create_user_table.py  e4708c88587f_create_record_table.py
scripts/: docker-entrypoint.sh  nginx.conf
