[tool.poetry]
name = "test_bot"
version = "0.1.0"
description = ""
authors = ["paveldemin <papyasishe@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.14.3"
gino = "^1.0.1"
loguru = "^0.5.3"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
alembic = "^1.7.1"
psycopg2-binary = "^2.9.1"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
